# rust-synth

./: Cargo.toml
src/: audioengine.rs  main.rs  midi.rs  synth.rs
