[package]
name = "rust-synth"
version = "0.1.0"
authors = ["Michael Allport <mmallport@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.6.2"
rustbox = "0.11.0"
cpal = "0.12.1"
anyhow = "1.0.32"
wmidi  = "3.1.0"

[patch.crates-io]
midir = { path = "/home/michael/progging/midir" }